--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ Flask==2.3.3; python_version < '3.7'
 Werkzeug==3.0.1; python_version > '3.6'
 Werkzeug==2.3.7; python_version < '3.7'
 gunicorn==20.1.0
+numpy==1.24.3
+pandas==1.1.5; python_version < '3.7'
+pandas==1.3.5; python_version == '3.7'
+pandas==2.0.1; python_version > '3.7'
+flask_bootstrap==3.3.7.1
+rank_bm25==0.2.2
