--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ numpy==1.24.3
 pandas==1.1.5; python_version < '3.7'
 pandas==1.3.5; python_version == '3.7'
 pandas==2.0.1; python_version > '3.7'
-flask_bootstrap==3.3.7.1
+Bootstrap-Flask==2.3.2
 rank_bm25==0.2.2
