--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-Flask==3.0.0; python_version > '3.6'
-Flask==2.3.3; python_version < '3.7'
-Werkzeug==3.0.1; python_version > '3.6'
-Werkzeug==2.3.7; python_version < '3.7'
+Flask==3.0.0
+Werkzeug==3.0.1
 gunicorn==20.1.0
+numpy==1.24.3
