--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-Flask==3.0.0
-Werkzeug==3.0.1
-gunicorn==20.1.0
 aiofiles==23.2.1
 aiohttp==3.8.5
 aiosignal==1.3.1
@@ -9,6 +6,8 @@ annotated-types==0.5.0
 anyio==3.7.1
 async-timeout==4.0.3
 attrs==23.1.0
+blinker==1.7.0
+Bootstrap-Flask==2.3.2
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.7
@@ -19,6 +18,7 @@ exceptiongroup==1.1.3
 fastapi==0.103.2
 ffmpy==0.3.1
 filelock==3.12.4
+Flask==3.0.0
 fonttools==4.39.2
 frozenlist==1.4.0
 fsspec==2023.9.2
@@ -30,6 +30,7 @@ httpx==0.25.0
 huggingface-hub==0.17.3
 idna==3.4
 importlib-resources==6.1.0
+itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
@@ -37,7 +38,7 @@ kiwisolver==1.4.4
 MarkupSafe==2.1.3
 matplotlib==3.7.1
 multidict==6.0.4
-numpy==1.24.2
+numpy==1.26.2
 openai==0.28.1
 orjson==3.9.7
 packaging==23.0
@@ -52,6 +53,7 @@ python-dateutil==2.8.2
 python-multipart==0.0.6
 pytz==2023.2
 PyYAML==6.0.1
+rank-bm25==0.2.2
 referencing==0.30.2
 requests==2.28.2
 rpds-py==0.10.3
@@ -66,4 +68,6 @@ typing_extensions==4.8.0
 urllib3==1.26.15
 uvicorn==0.23.2
 websockets==11.0.3
+Werkzeug==3.0.1
+WTForms==3.1.1
 yarl==1.9.2
