--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 Flask==3.0.0
 gunicorn==20.1.0
 Bootstrap-Flask==2.3.2
-importlib-resources==6.1.0
-Jinja2==3.1.2
-jsonschema==4.19.1
-jsonschema-specifications==2023.7.1
-numpy==1.26.2
-pandas==1.5.3
-rank-bm25==0.2.2
-requests==2.28.2
-seaborn==0.12.2
-websockets==11.0.3
+pandas
+matplotlib
+nltk
+numpy
+rank-bm25
+requests
+scikit-learn
+spacy
+https://github.com/explosion/spacy-models/releases/tag/pt_core_news_lg-3.7.0
